# excercise_marketing_campaign_predictor

./: README.md  main.py  pyproject.toml
data/: test_data_predictions.xlsx
notebooks/: EDA.ipynb
