[tool.poetry]
name = "excercise-marketing-campaign"
version = "0.1.0"
description = ""
authors = ["\"Tetiana Klymenko\" <tetiana.klymenko.jl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
notebook = "^7.3.2"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
xgboost = "^2.1.4"
optuna = "^4.2.1"
streamlit = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

